--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-authors = ["LongYinan <lynweklm@gmail.com>"]
+authors = ["deyihu"]
 edition = "2021"
-name = "napi-package-template"
+name = "delaunator-rs-node"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 napi = "2"
 napi-derive = "2"
+delaunator = "1.0.1"
 
 [build-dependencies]
 napi-build = "2"
