--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "lint-staged": "^13.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "delaunator": "^4.0.1"
   },
   "lint-staged": {
     "*.@(js|ts|tsx)": [
